# diffusion2d

./: README.md  pyproject.toml  requirements.txt
diffusion2d/: diffusion2d.py  output.py
