[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "caihy_diffusion2d"
version = "0.0.3"
description = "2D Diffusion Equation Solver"
authors = [
    { name = "Henry Cai", email = "st166080@stud.uni-stuttgart.de" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.11"
dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.7"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
diffusion2d-solver = "diffusion2d.diffusion2d:solve" 

[project.urls]
Repository = "https://github.com/HenryCai-st/diffusion2d"
